[GR-20370] Added unit tests.